--- a/Bio.html
+++ b/Bio.html
@@ -61,6 +61,7 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
+                    <li> Pokemon </li>
                 </ul>
               </div>
             </div>
