--- a/Bio.html
+++ b/Bio.html
@@ -23,15 +23,6 @@
                 height: 200px; 
             }
 
-            #basicInfo{
-                height: 150px; 
-                width: 300px;  
-                border-width: 1px; 
-                border-style:dashed; 
-                border-color: blue; 
-                background-color: pink; 
-            }
-
             .logo {
                 width:  50px; 
                 height: 50px; 
@@ -53,50 +44,50 @@
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Hobbies
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#"></a> <a href = "https://www.yugioh-card.com/en/">Yu-Gi-Oh</a> </li>
+                      <li><a class="dropdown-item" href="#"><a href = "https://www.pokemon.com/us/">POkemon</a></li>
                     </ul>
                   </li>
-                    <li> Pokemon </li>
                 </ul>
               </div>
             </div>
           </nav>
 
-        <img src = "Image.gif" ID = "myImage"> </image> 
-
-        <div id = "basicInfo"> 
-            <ul>
-                Name: Jan Daniel Lee Ng </br>
-                Age: 20 </br>
-                Course: Bachelor of Science in Information Technology (2020-Present) </br>
-                Address: Mars at Earth </br>
-            </ul>
-        </div>
-
-        <div id = "educInfo"> 
-            Academic Background:
-            <ul>
-                <li> Past Enrollments: 
-                    <ul type = "circle"> 
-                        <li> Studied at SPAS from Nursery to SHS. </li>
-                        <li> College is at De La Salle</li>
+        </br>  
+        <table border = "2"> 
+            <th colspan="3" align="center"> All about me </th>
+            <tr> <td> <img src = "Image.gif" ID = "myImage"> </image> </td>     
+            
+                 <td> Name: Jan Daniel Lee Ng </br>  
+                      Age: 20 </br> 
+                      Course: Bachelor of Science in Information Technology (2020-Present) </br>
+                      Address: Mars at Earth </td> 
+            </tr>
+        </table> 
+            <tr> Academic Background: </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li> Past Enrollments: 
+                            <ul type = "circle"> 
+                                <li> Studied at SPAS from Nursery to SHS. </li>
+                                <li> College is at De La Salle</li>
+                            </ul>
+                        </li>
+                        <li> Programming Knowledge: 
+                            <ol type = "1">
+                                <li> C </li>
+                                <li> Java </li>
+                                <li> HTML </li>
+                                <li> PHP </li>
+                            </ol>
+                        </li>
                     </ul>
-                </li>
-                <li> Programming Knowledge: 
-                    <ol type = "1">
-                        <li> C </li>
-                        <li> Java </li>
-                        <li> HTML </li>
-                        <li> PHP </li>
-                    </ol>
-                </li>
-            </ul>
-        </div>
+                </td>
+            </tr>
 
         <div id = "contacts">
             <a href = "https://www.facebook.com">  <img src = "fb.png" class = "logo"> </image> </a> 
